NEW: Quick level overview

--- a/20_Dbms.tex
+++ b/20_Dbms.tex
@@ -12,6 +12,13 @@
             \item Single CPU
             \item One relation is stored in a single file
         \end{itemize}
+    \item Overview
+        \begin{itemize}
+            \ides{Query Optimization:} SQL query to relational algebra converter
+            \ides{Operator Execution:} Execute a relation algebra operation
+            \ides{Access Methods:} Provides different ways of accessing data from a relation
+            \ides{Buffer Pool Management:} Gives illusion that all data is stored on memory
+        \end{itemize}
 \end{itemize}
 
 \subsection{Storage Hierarchy}
