--- a/21_Transactions.tex
+++ b/21_Transactions.tex
@@ -117,7 +117,7 @@
                                 \end{itemize}
                         \end{itemize}
                     \ides{Non-repeatable Reads:} Reading the same tuple twice any we may not get the same value both times
-                    \ides{Phantoms:} Tuples which get changed ad the tuple-level
+                    \ides{Phantoms:} Change to tuple which are only visible during some part of the transaction
                 \end{itemize}
             \ides{Isolation Level:} Defines for each transaction what isolation level it should have
                 \begin{itemize}
@@ -138,7 +138,7 @@ Serializable         & $\times$     & $\times$            & $\times$
 \begin{itemize}
     \ides{Serializable:} Schedule that leads to the same answer as some serial schedule
         \begin{itemize}
-            \item Only depends on final result and not I/O pattern along 
+            \item Only depends on final result and not I/O pattern along
             \item Not all sequential orders necessarily lead to the same result
             \icon Hard or impossible to enforce
         \end{itemize}
@@ -158,7 +158,7 @@ Serializable         & $\times$     & $\times$            & $\times$
                 \end{itemize}
             \ides{Types}
                 \begin{itemize}
-                    \ides{Read-Write:} 
+                    \ides{Read-Write:}
                         \begin{itemize}
                             \item Leads to unrepeatable reads
                         \end{itemize}
@@ -204,5 +204,190 @@ Serializable         & $\times$     & $\times$            & $\times$
                 \begin{itemize}
                     \item E.g. \verb+READ(X)+/ \verb+WRITE(X)+ before or after \verb+ABORT+ of other transaction may lead to different results (only if the other transaction did \verb+WRITE(X)+)
                 \end{itemize}
+        \end{itemize}
+\end{itemize}
+
+\subsection{Enforce Isolation}
+\begin{itemize}
+    \ides{Goal:} Only allow schedules that are conflict serializable
+    \item Two main approaches
+        \begin{itemize}
+            \ides{Pessimistic:} Assume that conflicts happen all the time
+                \begin{itemize}
+                    \item Use locks
+                \end{itemize}
+            \ides{Optimistic:} Assume that most transaction do not conflicts
+                \begin{itemize}
+                    \item Use snapshot isolation
+                \end{itemize}
+        \end{itemize}
+    \item Need to evaluate which approach is better for our application
+\end{itemize}
+
+\subsubsection{Locking}
+\begin{itemize}
+    \ides{Assume:} Do not know what transactions are going to do in the future
+    \ides{Idea:} Before the system access the data object $X$ it locks $X$
+        \begin{itemize}
+            \item Prevents access of $X$ by other transaction
+        \end{itemize}
+    \item Lock is released only when it is save to
+        \begin{itemize}
+            \item I.e. the execution is guaranteed to be conflict serializable
+        \end{itemize}
+    \item Allows to enforce serializable schedule
+    \item Types
+        \begin{itemize}
+            \ides{Shared Lock (S Lock):}
+                \begin{itemize}
+                    \item For reading
+                \end{itemize}
+            \ides{Exclusive Lock (X Lock):}
+                \begin{itemize}
+                    \item For writing
+                \end{itemize}
+        \end{itemize}
+    \item Does not necessarily enforce conflict serializability
+    \ides{Two-Phase Locking (2PL)}
+        \begin{itemize}
+            \item Consists of two phases
+                \begin{itemize}
+                    \ides{Phase 1: Growing}
+                        \begin{itemize}
+                            \item Acquire required locks
+                            \item Cannot release any locks
+                        \end{itemize}
+                    \ides{Phase 2: Shrinking}
+                        \begin{itemize}
+                            \item Release locks
+                            \item Cannot acquire new locks
+                        \end{itemize}
+                \end{itemize}
+            \ipro Guarantees conflict serializability
+            \icon \textbf{Cascading Abort:} Abort of one transaction leads to abort of another transaction
+                \begin{itemize}
+                    \item Happens when we read from a transaction which gets aborted
+                    \item Really bad if we have already committed
+                        \begin{itemize}
+                            \item Commit must be undone
+                            \item Conflicts with durability property
+                        \end{itemize}
+                \end{itemize}
+        \end{itemize}
+    \ides{Strict Two-Phase Locking (Strict 2PL)}
+        \begin{itemize}
+            \item Phase 1 is similar to 2PL
+            \ides{Phase 2:}
+                \begin{itemize}
+                    \item All looks are kept until end of transaction
+                        \begin{itemize}
+                            \item I.e. \verb+COMMIT+ or \verb+ABBORT+ released all locks
+                        \end{itemize}
+                \end{itemize}
+            \icon Deadlocks possible
+                \begin{itemize}
+                    \ides{Detection}
+                        \begin{itemize}
+                            \item Each transaction is a node
+                            \item $\exists$ edge $T_i$ to $T_j$ if $T_i$ is waiting for a lock currently hold by $T_j$
+                        \end{itemize}
+                    \item Deadlock if we have a cyclic wait-for graph
+                    \item Non-trivial to decide which transaction to kill
+                    \item Prevented by locking in some global order
+                \end{itemize}
+        \end{itemize}
+    \ides{Granularity}
+        \begin{itemize}
+            \item Problems
+                \begin{itemize}
+                    \item We need to lock every single tuple at its own
+                    \item We need to hold locks for whole transaction to prevent phantoms
+                \end{itemize}
+            \item DB is hierarchical structure and hence needs to support hierarchical locking
+            \item New locks
+                \begin{itemize}
+                    \ides{Intention Share (IS):}
+                        \begin{itemize}
+                            \item Some lower nodes are in S
+                        \end{itemize}
+                    \ides{Intention Exclusive (IX):}
+                        \begin{itemize}
+                            \item Some lower node are in X
+                        \end{itemize}
+                    \ides{Share and Intention Exclusive (SIX):}
+                        \begin{itemize}
+                            \item Root is locked in S
+                            \item Some lower node are in X
+                        \end{itemize}
+                \end{itemize}
+            \item Old locks
+                \begin{itemize}
+                    \ides{S:} All lower nodes are in shard
+                    \ides{X:} All lower nodes are in exclusive
+                \end{itemize}
+            \item Full overview\\
+                $\rotatebox[origin=c]{90}{Request}
+\begin{tabular}{c | c c c c c c}
+    & \multicolumn{6}{c}{Current Lock} \\[2ex]
+    Mode & NL & IS & IX & S & SIX & X\\\hline
+    NL & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$\\
+    IS & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$\\
+    IX & $\checkmark$ & $\checkmark$ & $\checkmark$ & $\times$ & $\times$ & $\times$\\
+    S & $\checkmark$ & $\checkmark$ & $\times$ & $\checkmark$ & $\times$ & $\times$\\
+    SIX & $\checkmark$ & $\checkmark$ & $\times$ & $\times$ & $\times$ & $\times$\\
+    X & $\checkmark$ & $\times$ & $\times$ & $\times$ & $\times$ & $\times$\\
+\end{tabular}$
+            \item Steps to lock a tuple
+                \begin{itemize}
+                    \item[1)] Acquire $IS$ on database
+                    \item[2)] Acquire $IS$ on table
+                    \item[3)] Acquire $S$ on tuple
+                \end{itemize}
+        \end{itemize}
+\end{itemize}
+
+\subsubsection{Snapshot Isolation}
+\begin{itemize}
+    \ides{Idea:} Assume that transaction are serializable and revert if they are not
+    \item Working
+        \begin{itemize}
+            \item Transaction receives timestamp $TS(T)$ when it starts
+            \item Reads are carried out as of the DV version of $TS(T)$
+            \item Writes are carried out on a separate buffer
+            \item When transaction commits, abort $T_1$ if $\exists T_2$ such that:
+                \begin{itemize}
+                    \item $T_1$ and $T_2$ update the same object and
+                    \item $T_2$ committed after $TS(T_1)$ but before $T_1$ commits
+                \end{itemize}
+            \item Instead of aborting $T_1$, we can also let $T_1$ finish and only then merge $T_2$
+        \end{itemize}
+    \ides{Timestamps}
+        \begin{itemize}
+            \item System clock or monotonically increasing for each transaction
+        \end{itemize}
+    \ipro High concurrency and availability
+        \begin{itemize}
+            \item Only block when transaction commits
+        \end{itemize}
+    \ipro No cascading abort
+    \ipro No deadlock
+    \icon Unnecessary rollbacks
+    \icon \textbf{Write Skew:} Interaction of multiple objects
+        \begin{itemize}
+            \item Checking integrity constrains happens in the snapshots
+            \item Two concurrent transaction update different objects
+            \item Integrity constrains for each is ok but for the combination not
+        \end{itemize}
+    \item Looser version
+        \begin{itemize}
+            \item Idea
+                \begin{itemize}
+                    \item Object themselves have read (last read) and write (last written) timestamps
+                    \item If transaction accesses object from the future (object has higher timestamp than transaction timestamp), transaction is aborted
+                    \item Object timestamps are updated on read/writes
+                \end{itemize}
+            \ipro No unnecessary rollbacks (I guess)
+            \icon Long transaction may starve
+            \icon Cascading aborts
         \end{itemize}
 \end{itemize}
