NEW: Section on SCION (not of great quality so far)

--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
     \include{./06_LinkLayer.tex}
     \include{./07_PhysicalLayer.tex}
     \include{./08_RoutingSecurity.tex}
+    \include{./09_Scion.tex}
     \todo{Mention throughput vs goodput}
 
 \end{document}
