NEW: Section about distributed db

--- a/main.tex
+++ b/main.tex
@@ -27,4 +27,5 @@
     \include{./20_Dbms.tex}
     \include{./21_Transactions.tex}
     \include{./22_Recoverability.tex}
+    \include{./23_Distribution.tex}
 \end{document}
