--- a/main.tex
+++ b/main.tex
@@ -17,7 +17,7 @@
 
     \include{./01_Introduction.tex}
     \include{./02_RelationalModel.tex}
-    \include{./03_RelationalAlgebra.tex}
+    \include{./03_QueryLanguage.tex}
     \include{./04_Sql.tex}
     \include{./09_IntegrityConstraints.tex}
     \include{./10_RecursiveQueries.tex}
