--- a/main.tex
+++ b/main.tex
@@ -19,6 +19,7 @@
     \include{./02_RelationalModel.tex}
     \include{./03_QueryLanguage.tex}
     \include{./04_Sql.tex}
+    \include{./06_ModellingProcess.tex}
     \include{./09_IntegrityConstraints.tex}
     \include{./10_RecursiveQueries.tex}
     \include{./11_Null.tex}
