IMPROVE: Rename constraints and add minor improvements

--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
     \include{./03_QueryLanguage.tex}
     \include{./04_Sql.tex}
     \include{./06_ModellingProcess.tex}
-    \include{./09_IntegrityConstraints.tex}
+    \include{./07_IntegrityConstraint.tex}
     \include{./10_RecursiveQueries.tex}
     \include{./11_Null.tex}
     \include{./12_View.tex}
