IMPROVE: Minor things

--- a/08_RecursiveQueries.tex
+++ b/08_RecursiveQueries.tex
@@ -3,32 +3,37 @@
 \section{Recursive Queries}
 \begin{itemize}
     \item Repeatedly execute the same query
-    \item Stop when it converges (answer does not change)
+    \item Stop when it converges
+        \begin{itemize}
+            \item I.e. when answer does not change
+        \end{itemize}
     \item Steps
         \begin{itemize}
-            \item Set $R =$ Empty
-            \item Run (base query UNION recursive query) and set it as the new R
-            \item Repeat until R does not change
-            \item Query using R
+            \item Set \verb+R = Empty+
+            \item Run \verb+(base query UNION recursive query)+ and set it as the new \verb+R+
+                \begin{itemize}
+                    \item Repeat until \verb+R+ does not change
+                \end{itemize}
+            \item Query \verb+R+
         \end{itemize}
     \item SQL
         \begin{itemize}
             \item
 \begin{verbatim}
-WITH RECURSIVE MyTable(myAttibute) AS
+WITH RECURSIVE some_table(some_attribute) AS
     (<base query>
 UNION
-    (recursive query>)
-<Final Query involving MyTable and other relations>
+    <recursive query>)
+<Final Query involving some_table and other relations>
 \end{verbatim}
                 \begin{itemize}
-                    \item \verb+MyTable(myAttribute)+ is the recursive table
+                    \item \verb+some_table(some_attribute)+ is the recursive table
                         \begin{itemize}
                             \item Can have any number of attributes
                         \end{itemize}
-                    \item \verb+<base query>+ is run one and populates \verb+MyTable+
-                    \item \verb+<recursive query>+ queries \verb+MyTable+ and updates it
-                    \item \verb+<Final Query>+ run one after \verb+MyTable+ converges
+                    \item \verb+<base query>+ is run only once at the beginning and populates \verb+some_table+
+                    \item \verb+<recursive query>+ queries \verb+some_table+ and updates it
+                    \item \verb+<Final Query>+ run one after \verb+some_table+ converges
                 \end{itemize}
         \end{itemize}
     \item Recursion can be infinite
