--- a/11_FunctionalDependency.tex
+++ b/11_FunctionalDependency.tex
@@ -49,6 +49,121 @@
                 \end{itemize}
                 \ides{Candidate Key} is $\alpha \subseteq \mc{R} \iff \alpha \to \overset{.}{} \mc{R}$
         \end{itemize}
+    \ides{Implication}
+        \begin{itemize}
+            \item Given:
+                \begin{itemize}
+                    \item Set $F$ of some FDs on schema $\mc{R}$
+                    \item FD $\alpha \to \beta$ which is $\not\in F$
+                \end{itemize}
+            \item $F$ \textbf{implies} $\alpha \to \beta$ if every relation instance $R$ o $\mc{R}$ that satisfies all FDs on $F$ also satisfies $\alpha \to \beta$
+            \ides{Notation:} $F \models \alpha \to \beta$
+        \end{itemize}
+    \ides{Derivation}
+        \begin{itemize}
+            \item Given:
+                \begin{itemize}
+                    \item Set $F$ of some FDs on schema $\mc{R}$
+                    \item FD $\alpha \to \beta$ which is $\not\in F$
+                \end{itemize}
+            \item $F$ \textbf{derives} $\alpha \to \beta$ if there is a derivation (using Armstrong's axioms) from $F$ to $\alpha \to \beta$
+            \ides{Notation:} $F \vdash \alpha \to \beta$
+        \end{itemize}
+    \ides{Closure}
+        \begin{itemize}
+            \item Given:
+                \begin{itemize}
+                    \item Set $F$ of some FDs on schema $\mc{R}$
+                    \item Set of attributes $\alpha \subseteq \mc{R}$
+                \end{itemize}
+            \item \textbf{Closure} of $\alpha$ is the set of all attributes that are implied by $F$
+            \ides{Notation:} $\alpha^+$
+            \item $\alpha^+ = \{y \in \mc{R} \mid F \vdash \alpha \to y\}$
+            \item $F \vdash \alpha \to \beta \iff \beta \subseteq \alpha^+$
+            \ides{Recipe:} Find $\alpha^+$
+                \begin{itemize}
+                    \item[1)] Set $\alpha^+$ to $\alpha$
+                    \item[2)] For all $\beta \in \alpha$ check if there is a $\beta \to \gamma$ and add $\gamma$ to $\alpha^+$ if so
+                    \item[3)] Repeat step 2 until $\alpha^+$ converges
+                \end{itemize}
+        \end{itemize}
+    \ides{Minimal Basis/Cover}
+        \begin{itemize}
+            \ides{Goal:} Remove redundant FDs in a set of FDs
+                \begin{itemize}
+                    \item I.e. FDs which we can derive from the other FDs
+                \end{itemize}
+            \item Given: Set $F$ of some FDs
+            \item A \textbf{Minimal Cover} of $F$ is a set $G \subseteq F$ with:
+                \begin{itemize}
+                    \item $G \equiv F$
+                    \item All FDs in $G$ have the form $X \to \alpha$, where $\alpha$ is a single attribute
+                    \item It is not possible to make $G$ smaller by:
+                        \begin{itemize}
+                            \item $G \setminus \{X \to \alpha\} \not\equiv G, \ \forall X \to \alpha \in G$
+                                \begin{itemize}
+                                    \item I.e. remove a FD
+                                \end{itemize}
+                            \item $(G \setminus \{X\alpha \to \beta\}) \cup \{X \to \beta\} \not\equiv G\ \forall X\alpha \to \beta \in G$
+                                \begin{itemize}
+                                    \item I.e. Remove a attribute from a FD
+                                \end{itemize}
+                        \end{itemize}
+                \end{itemize}
+            \ides{Recipe:} Compute minimal basis
+                \begin{itemize}
+                    \item[1)] Set $G$ to the set of FDs obtained from $F$ when decomposing the RHS of each FD to a single attribute
+                    \item[2)] Remove trivial FDs
+                    \item[3)] Remove all redundant attributes from the LHS of all FDs
+                    \item[4)] Remove all redundant FDs
+                \end{itemize}
+        \end{itemize}
+    \ides{Equivalence}
+        \begin{itemize}
+            \item Given: Set $F$ and $G$ of FDs on schema $\mc{R}$
+            \item $F$ and $G$ are \textbf{equivalent} if $F \models G$ and $G \models F$
+            \ides{Notation:} $F \equiv G$
     \item Cardinalities define FD
     \item FD determine keys
+        \end{itemize}
+    \ides{Armstrong Axioms}
+        \begin{itemize}
+            \item Axioms:
+                \begin{itemize}
+                    \ides{Reflexivity:} $\alpha \subseteq \beta \implies \beta \to \alpha$
+                        \begin{itemize}
+                            \item Special case is $\mc{R} \to \alpha$
+                            \item Trivial FDs
+                        \end{itemize}
+                    \ides{Augmentation:} $\alpha \to \beta \implies \alpha \gamma \to \beta \gamma$
+                        \begin{itemize}
+                            \item Where $\alpha \gamma := \alpha \cup \gamma$
+                        \end{itemize}
+                    \ides{Transitivity:} $\alpha \to \beta \wedge \beta \to \gamma \implies \alpha \to \gamma$
+                \end{itemize}
+            \item These axioms are both:
+                \begin{itemize}
+                    \ides{Sound:} $F \vdash \alpha \to \beta \implies F \models \alpha \to \beta$
+                    \ides{Complete:} $F \models \alpha \to \beta \implies F \vdash \alpha \to \beta$
+                \end{itemize}
+            \item All other FDs can be implied from these axioms
+        \end{itemize}
+    \ides{Other Rules}
+        \begin{itemize}
+            \ides{Union:} $\alpha \to \beta \wedge \alpha \to \gamma \implies \alpha \to \beta \gamma$
+            \ides{Composition:} $\alpha \to \beta \gamma \implies \alpha \to \beta \wedge \alpha \to \gamma$
+            \ides{Pseudo Transitivity:} $\alpha \to \beta \wedge \beta \gamma \to \theta \implies \alpha \gamma \to \theta$
+        \end{itemize}
+    \ides{Composition of Relations}
+        \begin{itemize}
+            \ides{Goal:} Split bad relations into ones containing only one concept
+                \begin{itemize}
+                    \ides{Bad Relation:} Relation which combine several concepts
+                \end{itemize}
+            \ides{Lossless Decomposition:} $R = R_1 \bowtie R_2 \bowtie \dots \bowtie R_n$
+                \begin{itemize}
+                    \item For $\mc{R} = \mc{R}_1 \cup \mc{R}_2$, decomposition $R_1 = \Pi_{\mc{R}_1}(R), R_2 = \Pi_{\mc{R}_2}(R)$ is lossless, if $(\mc{R}_1 \cap \mc{R}_2) \to \mc{R}_1 \vee (\mc{R}_1 \cap \mc{R}_2) \to \mc{R}_2$
+                \end{itemize}
+            \ides{Preservation of Dependencies:} $\text{FD}(R)^+ = [\text{FD}(R_1) \cup \dots \cup \text{FD}(R_n)]^+$
+        \end{itemize}
 \end{itemize}
