--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
     \include{./09_Null.tex}
     \include{./10_View.tex}
     \include{./11_FunctionalDependency.tex}
+    \include{./12_NormalForm.tex}
 
     \include{./20_Dbms.tex}
     \include{./21_Transactions.tex}
