IMPROVE: Add note about normalisation

--- a/06_ModellingProcess.tex
+++ b/06_ModellingProcess.tex
@@ -216,9 +216,10 @@
                         %Model Relation:
                         %Merge: if relation has shared primary key (aka. Denormalize)
                         %
-                        %with extra key, indicate other possibilities for primary keys
+                        %with `extra key`, indicate other possibilities for primary keys
                         %
                         %specialisatuib: specialisation get key from paret
+                    \item Automatically generates at least 3NF
                 \end{itemize}
         \end{enumerate}
     \item Can be done (Semi-) automatically
