NEW: incomplete analytics section

--- a/main.tex
+++ b/main.tex
@@ -26,6 +26,7 @@
     \include{./10_View.tex}
     \include{./11_FunctionalDependency.tex}
     \include{./12_NormalForm.tex}
+    \include{./13_Analytic.tex}
     \include{./14_Dbms.tex}
     \include{./15_Transactions.tex}
     \include{./16_Recoverability.tex}
