NEW: section with some commands

--- a/main.tex
+++ b/main.tex
@@ -24,6 +24,7 @@
     \include{./07_PhysicalLayer.tex}
     \include{./08_RoutingSecurity.tex}
     \include{./09_Scion.tex}
+    \include{./10_Appendix.tex}
     \todo{Mention throughput vs goodput}
 
 \end{document}
