FIX: Strip trailing white space

--- a/02_ApplicationLayer.tex
+++ b/02_ApplicationLayer.tex
@@ -244,7 +244,7 @@
 
 \subsubsection{HTTP}
 \begin{itemize}
-    \ides{Hypertext Transfer Protocol (HTTP)} 
+    \ides{Hypertext Transfer Protocol (HTTP)}
     \item Simple
     \item Synchronous Request-Response: make request and wait
     \item Layered over a bidirectional byte stream: Build on TCP (most of the times)
@@ -294,7 +294,7 @@
         \end{itemize}
     \ides{Cookies}
         \begin{itemize}
-            \ides{Stateless:} Each request is treated independently 
+            \ides{Stateless:} Each request is treated independently
                 \begin{itemize}
                     \ipro Server-side scalability
                     \ipro Failure handling is trivial
@@ -440,6 +440,8 @@
                     \item Both algorithms can be combined
                 \end{itemize}
         \end{itemize}
+    \ides{Bitrate} of a video is the size of video divided by the length of the video
+
 \end{itemize}
 
 \subsection{CDN}
