UPDATE: Summary style

--- a/summary.sty
+++ b/summary.sty
@@ -8,8 +8,25 @@
 \usepackage{fancyhdr}
 %\usepackage{shortvrb}
 %\MakeShortVerb`
+
+% Listing
 \usepackage{enumitem}
 \setlist{nolistsep}
+\setlistdepth{20}
+\renewlist{itemize}{itemize}{20}
+
+% initially, use dots for all levels
+\setlist[itemize]{label=$\cdot$}
+
+% customize the first 3 levels
+\setlist[itemize,1]{label=\textbullet}
+\setlist[itemize,2]{label=--}
+\setlist[itemize,3]{label=*}
+
+% List commands
+\newcommand{\ipro}{\item[+]}
+\newcommand{\icon}{\item[-]}
+\newcommand{\ides}[1]{\item \textbf{#1}}
 
 \usepackage{geometry}
 \geometry{paper=a4paper,left=32mm,right=23mm,top=35mm, bottom=35mm}
@@ -17,7 +34,3 @@
 % Todo
 \newcommand{\todo}[1]{\textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
 
-% List commands
-\newcommand{\ipro}{\item[+]}
-\newcommand{\icon}{\item[-]}
-\newcommand{\ides}[1]{\item \textbf{#1}}
