IMPROVE: Header/footer and title

--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 
 \begin{document}
 
-    \lhead{Spring 2020}
-    \chead{Template}
-    \rhead{\today}
+    \lhead{DMDB}
+    \rhead{\leftmark}
 
-    \title{Template}
+    \title{Data Management and Databases}
+    \subtitle{Spring 2021}
     \author{Jean-Claude Graf}
     \maketitle
 
