IMPROVE: header and title

--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 
 \begin{document}
 
-    \lhead{Spring 2021}
-    \chead{Computer Networks}
-    \rhead{\today}
+    \lhead{CN}
+    \rhead{\leftmark}
 
     \title{Computer Networks}
+    \subtitle{Spring 2021}
     \author{Jean-Claude Graf}
     \maketitle
 
